Updated the download event handler to account for Chrome.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="prop-container">
 
             <!-- Download -->
-            <span class="prop" id="downloadimg">D</span>
+            <span class="prop" id="downloadimg" download="drawing.png">D</span>
             
             <!-- Clear -->
             <span class="prop" id="clearimg">C</span>
