11/17 Meeting: Stacks, Redo, Undo

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <!-- TOOLS Brush, Eraser, Fill -->
         <div class="prop-container">
 
+            <!-- Undo Functionality -->
+            <span class="prop" id="undo">U</span>
+
             <!-- Brush Tool -->
             <span class="prop" id="brushtool">B</span>
 
@@ -55,6 +58,10 @@
 
         <!-- COLORS -->
         <div class="prop-container">
+
+            <!-- Redo Functionality -->
+            <span class="prop" id="redo">R</span>
+
             <span class="prop color" style="background-color: red;"></span>
             <span class="prop color" style="background-color: yellow;"></span>
             <span class="prop color" style="background-color: blue;"></span>
