--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
 
         #mycanvas {
-            background-color: #fff;
+            background-color: rgb(255, 255, 255);
         }
 
         #canvas-container {
@@ -62,12 +62,12 @@
             <!-- Redo Functionality -->
             <span class="prop" id="redo">R</span>
 
-            <span class="prop color" style="background-color: red;"></span>
-            <span class="prop color" style="background-color: yellow;"></span>
-            <span class="prop color" style="background-color: blue;"></span>
-            <span class="prop color" style="background-color: green;"></span>
-            <span class="prop color" style="background-color: pink;"></span>
-            <span class="prop color" style="background-color: black;"></span>
+            <span class="prop color" style="background-color: rgb(255, 0, 0);"></span>
+            <span class="prop color" style="background-color: rgb(255, 255, 0);"></span>
+            <span class="prop color" style="background-color: rgb(0, 0, 255);"></span>
+            <span class="prop color" style="background-color: rgb(0, 128, 0);"></span>
+            <span class="prop color" style="background-color: rgb(255, 192, 203);"></span>
+            <span class="prop color" style="background-color: rgb(0, 0, 0);"></span>
             <input class="prop color" type="color" />
         </div>
 
@@ -85,5 +85,6 @@
     </div>
 
     <script src="canvas.js"></script>
+    <script src="queue-fill.js"></script>
 </body>
 </html>
