Fixed hex to rgb conversion for fill tool

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="prop-container">
 
             <!-- Brush Tool -->
-            <span class="prop" id="brushtool">
+            <span class="prop prop-selected" id="brushtool">
 
                 <svg width="25" height="25" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13.7855 21.5131C12.307 20.0156 9.64292 19.5731 6.99322 20.9291C4.63933 22.1978 2.93112 24.6336 2.64113 27.1468C2.3479 29.9191 1.63515 32.2002 1.08296 33.0204L0.0179982 34.6016L1.72344 34.5401C2.14115 34.5255 2.5809 34.4932 3.03548 34.444C6.38115 34.0818 10.5523 32.7894 12.9725 30.5016C15.3541 28.2237 16.0672 23.8243 13.7854 21.5132L13.7855 21.5131Z" fill="white"/>
