Commented out the rectangle addition that happens at the beginning..

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <!-- Color Picker Tool -->
             <span class="prop">
-                <input class="prop color" type="color" />                  
+                <input class="prop color" type="color" value="#FFFFFF"/>                  
             </span>
 
         </div>
