Found some issues... they have been documented in GitHub

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </span>
 
             <!-- Color Picker Tool -->
-            <span class="prop">
-                <input class="prop color" type="color" value="#FFFFFF"/>                  
+            <span class="prop" id="colorpicker">
+                <input class="color" type="color" value="#FFFFFF"/>                  
             </span>
 
         </div>
