--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
+    <div id="top-container" class="container">
 
-        <!-- TOOLS Brush, Eraser, Fill -->
+        <!-- TOOLS -->
         <div class="prop-wrapper">
             <span class="label">Tools</span>
 
@@ -50,31 +50,28 @@
 
         <canvas id="mycanvas" width="800" height="500"></canvas>
 
-        <!-- CLEAR / DOWNLOAD -->
-
+        <!-- UNDO / REDO -->
         <div class="prop-wrapper">
             <span class="label">Undo / Redo</span>
 
             <div class="prop-row">
 
                 <!-- Undo Functionality -->
-                <span class="prop" id="undo">
-                    <svg width="25" height="25" viewBox="0 0 44 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M40.4951 39.25C39.9811 39.265 39.4775 39.1034 39.0681 38.7923C38.6587 38.4812 38.3683 38.0392 38.2451 37.54C37.232 33.526 35.0011 29.924 31.8587 27.2288C28.7163 24.5336 24.8166 22.8774 20.6951 22.4875V25.0075C20.6947 25.7956 20.4618 26.5661 20.0256 27.2225C19.5893 27.8789 18.9691 28.392 18.2426 28.6975C17.4548 29.0596 16.5791 29.1865 15.7209 29.0627C14.8627 28.939 14.0585 28.5699 13.4051 28L2.02007 18.0775C1.5835 17.7057 1.23287 17.2436 0.992419 16.723C0.75197 16.2025 0.627441 15.6359 0.627441 15.0625C0.627441 14.4891 0.75197 13.9225 0.992419 13.4019C1.23287 12.8814 1.5835 12.4192 2.02007 12.0475L13.4051 2.10248C14.0671 1.52268 14.8846 1.14972 15.7564 1.02975C16.6282 0.909776 17.516 1.04806 18.3101 1.42748C19.0366 1.733 19.6568 2.24607 20.0931 2.90246C20.5293 3.55884 20.7622 4.32935 20.7626 5.11748V7.74998C26.8741 8.2225 32.5865 10.9685 36.7726 15.4462C40.9587 19.9239 43.3145 25.8081 43.3751 31.9375C43.372 33.8264 43.1378 35.7079 42.6776 37.54C42.5544 38.0392 42.2639 38.4812 41.8545 38.7923C41.4452 39.1034 40.9416 39.265 40.4276 39.25H40.4951Z" fill="white"/>
-                    </svg>
-                </span>
+                <svg id="undo" width="25" height="25" viewBox="0 0 44 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M40.4951 39.25C39.9811 39.265 39.4775 39.1034 39.0681 38.7923C38.6587 38.4812 38.3683 38.0392 38.2451 37.54C37.232 33.526 35.0011 29.924 31.8587 27.2288C28.7163 24.5336 24.8166 22.8774 20.6951 22.4875V25.0075C20.6947 25.7956 20.4618 26.5661 20.0256 27.2225C19.5893 27.8789 18.9691 28.392 18.2426 28.6975C17.4548 29.0596 16.5791 29.1865 15.7209 29.0627C14.8627 28.939 14.0585 28.5699 13.4051 28L2.02007 18.0775C1.5835 17.7057 1.23287 17.2436 0.992419 16.723C0.75197 16.2025 0.627441 15.6359 0.627441 15.0625C0.627441 14.4891 0.75197 13.9225 0.992419 13.4019C1.23287 12.8814 1.5835 12.4192 2.02007 12.0475L13.4051 2.10248C14.0671 1.52268 14.8846 1.14972 15.7564 1.02975C16.6282 0.909776 17.516 1.04806 18.3101 1.42748C19.0366 1.733 19.6568 2.24607 20.0931 2.90246C20.5293 3.55884 20.7622 4.32935 20.7626 5.11748V7.74998C26.8741 8.2225 32.5865 10.9685 36.7726 15.4462C40.9587 19.9239 43.3145 25.8081 43.3751 31.9375C43.372 33.8264 43.1378 35.7079 42.6776 37.54C42.5544 38.0392 42.2639 38.4812 41.8545 38.7923C41.4452 39.1034 40.9416 39.265 40.4276 39.25H40.4951Z" fill="white"/>
+                </svg>
     
                 <!-- Redo Functionality -->
-                <span class="prop" id="redo">
-                    <svg width="25" height="25" viewBox="0 0 44 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3.50493 39.25C4.01891 39.265 4.52251 39.1034 4.93189 38.7923C5.34127 38.4812 5.63174 38.0392 5.75493 37.54C6.76802 33.526 8.99894 29.924 12.1413 27.2288C15.2837 24.5336 19.1834 22.8774 23.3049 22.4875V25.0075C23.3053 25.7956 23.5382 26.5661 23.9744 27.2225C24.4107 27.8789 25.0309 28.392 25.7574 28.6975C26.5452 29.0596 27.4209 29.1865 28.2791 29.0627C29.1373 28.939 29.9415 28.5699 30.5949 28L41.9799 18.0775C42.4165 17.7057 42.7671 17.2436 43.0076 16.723C43.248 16.2025 43.3726 15.6359 43.3726 15.0625C43.3726 14.4891 43.248 13.9225 43.0076 13.4019C42.7671 12.8814 42.4165 12.4192 41.9799 12.0475L30.5949 2.10248C29.9329 1.52268 29.1154 1.14972 28.2436 1.02975C27.3718 0.909776 26.484 1.04806 25.6899 1.42748C24.9634 1.733 24.3432 2.24607 23.9069 2.90246C23.4707 3.55884 23.2378 4.32935 23.2374 5.11748V7.74998C17.1259 8.2225 11.4135 10.9685 7.2274 15.4462C3.04127 19.9239 0.685491 25.8081 0.624928 31.9375C0.628009 33.8264 0.862249 35.7079 1.32243 37.54C1.44562 38.0392 1.73608 38.4812 2.14547 38.7923C2.55485 39.1034 3.05845 39.265 3.57243 39.25H3.50493Z" fill="white"/>
-                    </svg>
-                </span>
+                <svg id="redo" width="25" height="25" viewBox="0 0 44 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3.50493 39.25C4.01891 39.265 4.52251 39.1034 4.93189 38.7923C5.34127 38.4812 5.63174 38.0392 5.75493 37.54C6.76802 33.526 8.99894 29.924 12.1413 27.2288C15.2837 24.5336 19.1834 22.8774 23.3049 22.4875V25.0075C23.3053 25.7956 23.5382 26.5661 23.9744 27.2225C24.4107 27.8789 25.0309 28.392 25.7574 28.6975C26.5452 29.0596 27.4209 29.1865 28.2791 29.0627C29.1373 28.939 29.9415 28.5699 30.5949 28L41.9799 18.0775C42.4165 17.7057 42.7671 17.2436 43.0076 16.723C43.248 16.2025 43.3726 15.6359 43.3726 15.0625C43.3726 14.4891 43.248 13.9225 43.0076 13.4019C42.7671 12.8814 42.4165 12.4192 41.9799 12.0475L30.5949 2.10248C29.9329 1.52268 29.1154 1.14972 28.2436 1.02975C27.3718 0.909776 26.484 1.04806 25.6899 1.42748C24.9634 1.733 24.3432 2.24607 23.9069 2.90246C23.4707 3.55884 23.2378 4.32935 23.2374 5.11748V7.74998C17.1259 8.2225 11.4135 10.9685 7.2274 15.4462C3.04127 19.9239 0.685491 25.8081 0.624928 31.9375C0.628009 33.8264 0.862249 35.7079 1.32243 37.54C1.44562 38.0392 1.73608 38.4812 2.14547 38.7923C2.55485 39.1034 3.05845 39.265 3.57243 39.25H3.50493Z" fill="white"/>
+                </svg>
             </div>
         </div>
     </div>
 
-    <div class="container">
+    <div id="second-container" class="container">
+
+        <!-- CLEAR -->
         <div class="prop-wrapper">
             <span class="label">Clear</span>
 
@@ -84,21 +81,23 @@
             </div>
         </div>
 
+        <!-- PALETTE -->
+        <div id="palette-wrapper" class="prop-wrapper">
+            <div class="palette-label">
+                <span class="label">Palette</span>
+            </div>
 
-        <!-- COLORS -->
-        <div class="prop-wrapper">
-            <span class="label">Palette</span>
-
-            <div class="prop-row">
-                <span class="prop color" style="background-color: rgb(255, 0, 0);"></span>
-                <span class="prop color" style="background-color: rgb(255, 255, 0);"></span>
-                <span class="prop color" style="background-color: rgb(0, 0, 255);"></span>
-                <span class="prop color" style="background-color: rgb(0, 128, 0);"></span>
-                <span class="prop color" style="background-color: rgb(255, 192, 203);"></span>
-                <span class="prop color" style="background-color: rgb(0, 0, 0);"></span>
+            <div class="palette-row">
+                <span class="color" style="background-color: rgb(255, 135, 135);"></span>
+                <span class="color" style="background-color: rgb(245, 203, 97);"></span>
+                <span class="color" style="background-color: rgb(177, 225, 130);"></span>
+                <span class="color" style="background-color: rgb(153, 227, 209);"></span>
+                <span class="color" style="background-color: rgb(105, 181, 236);"></span>
+                <span class="color" style="background-color: rgb(202, 154, 232);"></span>
             </div>
         </div>
 
+        <!-- DOWNLOAD -->
         <div class="prop-wrapper">
             <span class="label">Download</span>
 
