Added styling to left and right lower containers.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 
             <div class="prop-row">
                 <!-- Clear -->
-                <span class="prop" id="clearimg">C</span>
+                <svg id="clearimg" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 42.634 43.363">
+                    <path fill="#FFF" data-name="Path 165" d="M192.593,261.149a21.673,21.673,0,0,0-30.014-.611l-4.458-4.457.018,14.35,14.356.027-4.435-4.442a13.937,13.937,0,1,1-.647,20.315,13.76,13.76,0,0,1-2.587-3.635l-.277-.555H156.3l.448,1.321a21.68,21.68,0,0,0,20.519,14.7h0a21.681,21.681,0,0,0,15.324-37.015Z" transform="translate(-156.297 -254.801)"></path>
+                </svg>
             </div>
         </div>
 
@@ -103,7 +105,9 @@
 
             <div class="prop-row">
                 <!-- Download -->
-                <span class="prop" id="downloadimg" download="drawing.png">D</span>
+                <svg id="downloadimg" download="drawing.png" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 43.388 39.078">
+                    <path fill="#FFF" data-name="Union 1" d="M10361,4743.078v-6.841h42.388v6.841Zm19.563-11.679-10.295-10.786h6.049V4705h10.789v15.613h6.1l-10.292,10.786a1.627,1.627,0,0,1-2.35,0Z" transform="translate(-10360.501 -4704.5)" stroke="rgba(0,0,0,0)" stroke-miterlimit="10" stroke-width="1"></path>
+                </svg>
             
             </div>
         </div>
