Color functionality works now!

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 </span>
     
                 <!-- Color Picker Tool -->
-                <span class="tool" id="colorpicker">
-                    <input class="color" type="color" value="#FFFFFF"/>                  
+                <span class="tool">
+                    <input id="colorpicker" class="color" type="color" value="#FFFFFF"/>                  
                 </span>
     
             </div>
