--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebS App</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
     <div id="top-container" class="container">
@@ -113,8 +113,8 @@
         </div>
     </div>
 
-    <script src="tools.js"></script>
-    <script src="canvas.js"></script>
-    <script src="queue-fill.js"></script>
+    <script src="js/tools.js"></script>
+    <script src="js/canvas.js"></script>
+    <script src="js/queue-fill.js"></script>
 </body>
 </html>
