Still did not solve the issue

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         </div>
     </div>
 
-    <script src="js/tools.js"></script>
-    <script src="js/canvas.js"></script>
+    <!-- <script src="js/tools.js"></script> -->
+    <script src="js/old-canvas.js"></script>
     <script src="js/queue-fill.js"></script>
 </body>
 </html>
